<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="url_endpoint">url_endpoint</string>
    <string name="rationale_allpermissions">Mohon berikan izin agar bisa menggunakan aplikasi</string>
    <string name="rationale_readphonestate">Mohon berikan izin untuk menggunakan aplikasi. Aplikasi akan terlogout otomatis jika tidak diberikan izin</string>
    <string name="rationale_externalstorage">Mohon berikan izin agar bisa mengakses direktori</string>
    <string name="rationale_requestlocation">Mohon berikan izin agar bisa mengakses lokasi</string>
    <string name="rationale_storageandcamera">Mohon berikan izin agar bisa mengambil foto dan menyimpan</string>
    <string name="key_should_update">should_update</string>
    <string name="key_should_not_show_take_picture_dialog">should_not_show_take_picture_dialog</string>
    <string name="push_sender_id">494949404342</string>
    <string name="push_reg_id_key">push_reg_id_key</string>
    <string name="apk_update_url">apk_update_url</string>
    <string name="latest_apk_version">latest_apk_version</string>
    <string name="latest_form_version">latest_form_version</string>
    <string name="push_sender_id_key">push_sender_id_key</string>
    <string name="pref_push_notification_key">pref_push_notification_key</string>
    <string name="schedule">Jadwal</string>
    <string name="preventive">Preventive</string>
    <string name="corrective">Corrective</string>
    <string name="newlocation">Lokasi Baru</string>
    <string name="colocation">CoLocation</string>
    <string name="settings">Pengaturan</string>
    <string name="fiber_optic">Fiber Optic</string>
    <string name="hasil_PM">Hasil PM</string>
    <string name="site_audit">Site Audit</string>
    <string name="foto_imbas_petir">Imbas Petir</string>
    <string name="routing">Routing</string>
    <string name="routing_segment">Routing Segment</string>
    <string name="handhole">Handhole</string>
    <string name="hdpe">HDPE</string>
    <string name="focut">FO Cut</string>
    <string name="app_reg_id">app_reg_id</string>
    <string name="app_fcm_reg_id">app_fcm_reg_id</string>
    <string name="action_settings">Pengaturan</string>
    <string name="hello_world">Hello world!</string>
    <string name="forgot_password">Lupa Password ?</string>
    <string name="signin">Sign in</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="offline_form">Offline Form</string>
    <string name="user_name">nama</string>
    <string name="user_fullname">nama lengkap</string>
    <string name="password">sandi</string>
    <string name="user_id">user_id</string>
    <string name="user_authToken">user_authtoken</string>
    <string name="user_cookie">cookiieeee_8D</string>
    <string name="uid">UID</string>
    <string name="latest_user_db">latest_user_db</string>
    <string name="latest_user_db_value">latest_user_db_value</string>
    <string name="keep_login">tetap login</string>
    <string name="ok">OK</string>
    <string name="nok">NOK</string>
    <string name="noanswer">Tidak ada jawaban</string>
    <string name="condition">Condition</string>
    <string name="measurement">Measurement</string>
    <string name="criteria">Criteria :</string>
    <string name="event_take_picture">User memulai pengambilan foto</string>
    <string name="error_delete_file">Gagal menghapus data file</string>
    <string name="error_delete_files">Gagal menghapus foto /file dari memori device</string>
    <string name="error_delete_warga_barang">Gagal menghapus</string>
    <string name="error_delete_schedule">Gagal menghapus schedule</string>
    <string name="error_delete_schedule_relogin">Gagal menghapus schedule. Mohon login ulang</string>
    <string name="error_delete_all_local_data">Gagal menghapus seluruh data lokal</string>
    <string name="error_delete_local_schedule_data">Gagal menghapus data lokal schedule</string>
    <string name="error_delete_schedule_id_not_found">Gagal menghapus schedule. Schedule id tidak ditemukan</string>
    <string name="error_prerparing_upload_items">Penyiapan upload item gagal</string>
    <string name="error_retrieving_firebase_instance_id">Gagal mendapatkan firebase instance id. Mohon laporkan masalah</string>
    <string name="error_device_id_empty">Tidak bisa mendapatkan device id</string>
    <string name="error_fcm_token_empty">Token FCM kosong. Gagal registrasi device</string>
    <string name="error_site_empty">Error: Data site kosong. Mohon laporkan problem ini</string>
    <string name="error_site_location_empty">Error: Data lokasi site kosong. Mohon laporkan problem ini</string>
    <string name="error_access_token_empty">Access token kosong. Gagal registrasi device</string>
    <string name="error_schedule_empty">Schedule kosong. Silahkan "Muat ulang jadwal" di halaman pengaturan</string>
    <string name="error_form_empty">Form kosong. Silahkan "Update form" di halaman pengaturan</string>
    <string name="error_response_null">Gagal mendapatkan response dari server</string>
    <string name="error_not_json_type">Respon bukan tipe json</string>
    <string name="error_failed_download_forms">Gagal mengunduh form</string>
    <string name="error_failed_save_forms">Gagal menyimpan forms</string>
    <string name="error_failed_download_forms_imbas_petir">Gagal mengunduh form imbas petir</string>
    <string name="error_failed_save_forms_imbas_petir">Gagal menyimpan form imbas petir</string>
    <string name="error_failed_download_schedules">Gagal mengunduh schedule</string>
    <string name="error_failed_save_schedule">Gagal menyimpan schedule</string>
    <string name="error_failed_delete_schedules">Gagal muat ulang hapus schedule</string>
    <string name="error_latest_version_not_found">Tidak ada informasi versi terakhir</string>
    <string name="error_failed_check_apk_version">Gagal mengecek versi aplikasi</string>
    <string name="error_update_apk">Gagal mengupdate apk</string>
    <string name="error_apk_not_found">Update aplikasi gagal! File APK tidak terunduh atau tidak ditemukan</string>
    <string name="error_login_unauthorized">Username and Password salah</string>
    <string name="error_login_field_blanked">Mohon masukkan dengan benar username dan password</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_feature_not_supported_or_removed_from_server">Fitur ini belum didukung oleh server atau dihapus dari server</string>
    <string name="error_network_connection_problem">Masalah pada jaringan</string>
    <string name="error_disconnected">Jaringan terputus. Periksa jaringan Anda</string>
    <string name="error_comment_can_not_blank">Pesan tidak boleh kosong</string>
    <string name="error_search_product_not_found">Maaf, kami tidak menemui produk apapun yang sesuai</string>
    <string name="error_search_people_not_found">Maaf, kami tidak menemui orang yang sesuai</string>
    <string name="error_copy_database">Gagal salin database</string>
    <string name="error_no_internet_connection">Tidak ada koneksi internet, silahkan periksa jaringan anda.</string>
    <string name="error_no_upload_item">Tidak ada item yang baru untuk di upload</string>
    <string name="error_upload_item">Gagal upload item</string>
    <string name="error_no_item">Tidak ada item</string>
    <string name="error_make_dir">Gagal membuat direktori</string>
    <string name="error_storage_read_only">Gagal menyimpan file. (Storage is read-only)</string>
    <string name="error_storage_is_not_available">Gagal menyimpan file. (Storage is not available)</string>
    <string name="error_file_name_too_short">Nama file terlalu pendek. Minimum 3 karakter</string>
    <string name="error_take_picture">Pengambilan foto gagal. %s</string>
    <string name="error_no_camera_application">Tidak ditemukan aplikasi kamera yang mendukung</string>
    <string name="error_load_image">Gagal menampilkan gambar</string>
    <string name="error_resize_and_save_image">Gagal mengkompresi dan menyimpan foto. (ERROR: %s)</string>
    <string name="error_photo_item_not_valid">Gagal mengambil foto. Item tidak valid</string>
    <string name="error_imageuri_or_photofile_empty">Gagal mengambil foto. Image URI atau photo path kosong</string>
    <string name="error_url_bad_format">URL tidak benar. Periksa kembal</string>
    <string name="error_photo_file_not_created">Aplikasi gagal membuat file foto</string>
    <string name="error_input_amount_warga">Mohon masukkan jumlah warga dengan benar</string>
    <string name="error_input_amount_barang">Mohon masukkan jumlah barang dengan benar</string>
    <string name="error_using_manual_date_time">Gagal menyimpan foto. Pastikan menggunakan "Automatic date and time" di pengaturan device</string>
    <string name="error_permission_denied">Mohon berikan izin agar dapat melanjutkan</string>
    <string name="error_distance_too_far">Gagal check-in. Jarak PIC dengan lokasi site di atas 100 m</string>
    <string name="error_accuracy_too_low">Gagal check-in. Akurasi GPS terlalu rendah (di atas 50 m). Tunggu beberapa saat</string>
    <string name="error_please_wait_gps">Mohon tunggu. Sedang proses mendapatkan lokasi</string>
    <string name="success_copydatabase">Berhasil salin database</string>
    <string name="success_createdir">Berhasil membuat direktori</string>
    <string name="success_delete_files">Berhasil menghapus seluruh data</string>
    <string name="success_delete_file">Berhasil menghapus data file</string>
    <string name="success_delete_schedule">Berhasil menghapus schedule</string>
    <string name="success_permissions_granted">Permissions diizinkan</string>
    <string name="success_update_schedule">Schedule berhasil diperbaharui</string>
    <string name="success_update_form">Form berhasil diperbaharui</string>
    <string name="success_update_form_imbas_petir">Form imbas petir berhasil diperbaharui</string>
    <string name="success_latest_apk">Aplikasi terinstal merupakan versi terupdate</string>
    <string name="success_preparing_upload_items">Penyiapan upload item selesai</string>
    <string name="success_check_in">Checkin berhasil</string>
    <string name="success_check_out">Checkout_berhasil</string>
    <string name="success_storage_available_writeable">Tersedia storage writeable</string>
    <string name="warning_update_form_title">Mengupdate ulang form</string>
    <string name="warning_update_form_message">Anda akan melakukan update form. Pastikan Anda sedang dalam jaringan internet yang stabil dan kencang agar proses update form berjalan sempurna.
     Klik tombol "OK" untuk mengupdate form.</string>
    <string name="warning_check_play_service">Error</string>
    <string name="warning_check_play_service_message">Mohon install Google Play</string>
    <string name="warning_input_amount_warga_barang">Jumlah maksimal untuk ditambahkan adalah 10. Lakukan penambahan kembali jika diperlukan penambahan</string>
    <string name="warning_mohon_klik_tombol_update">Mohon untuk klik tombol "Update" untuk menggunakan aplikasi terbaru</string>
    <string name="info_preparing_upload_items">Menyiapkan item untuk diupload</string>
    <string name="info_deleting_schedule">Menghapus schedule</string>
    <string name="info_deleting_all_data">Menghapus seluruh data</string>
    <string name="info_checking_data_for_checkin">Checking data</string>
    <string name="info_sending_check_in_data">Mengirim data checkin</string>
    <string name="informationGPS">Information</string>
    <string name="enableGPS">Silahkan aktifkan GPS</string>
    <string name="getScheduleFromServer">Mendapatkan Schedule dari server</string>
    <string name="defaultdialogmessage">This is dialog message</string>
    <string name="defaultconfirmpositive">OK</string>
    <string name="defaultconfirmnegative">Cancel</string>
</resources>