<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/layouttitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/item_drill_red"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/defaultdialogmessage"
            app:layout_constraintTop_toBottomOf="@id/layouttitle"
            app:layout_constraintStart_toStartOf="parent" />

        <com.sap.inspection.view.FormInputText
            android:id="@+id/inputtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/action_settings"
            android:textSize="12sp"
            android:hint="@string/app_name"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonconfirmpositive"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/defaultconfirmpositive"
            android:textColor="@android:color/white"
            android:background="@color/item_drill_red"
            app:layout_constraintTop_toBottomOf="@id/inputtext"
            app:layout_constraintEnd_toStartOf="@id/buttonconfirmnegative"/>

        <Button
            android:id="@+id/buttonconfirmnegative"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/defaultconfirmnegative"
            android:textColor="@color/item_drill_red"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/inputtext"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>